--- a/soccer_field_project/src/main/webapp/login.html
+++ b/soccer_field_project/src/main/webapp/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,30 +13,32 @@
 
     <div class="login-wrap">
         <div class="login-html">
+        <form action="login" method="post" class="sign-in-form">
             <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
             <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
             <div class="login-form">
                 <div class="sign-in-htm">
                     <div class="group">
                         <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input">
+                        <input id="user" name="username" type="text" class="input">
                     </div>
                     <div class="group">
                         <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" data-type="password">
+                        <input id="pass" name="password" type="password" class="input" data-type="password">
                     </div>
                     <div class="group">
-                        <input id="check" type="checkbox" class="check" checked>
+                        <input id="check" name="rem" type="checkbox" class="check" checked>
                         <label for="check"><span class="icon"></span> Keep me Signed in</label>
                     </div>
                     <div class="group">
-                        <input id="btn-sign-in" type="submit" class="button" value="Sign In">
+                        <input id="btn-sign-in" onclick="validateUserName()" type="submit" class="button" value="Sign In">
                     </div>
                     <div class="hr"></div>
                     <div class="foot-lnk">
                         <a href="#forgot">Forgot Password?</a>
                     </div>
                 </div>
+         </form>
                 <div class="sign-up-htm">
                     <div class="group">
                         <label for="user" class="label">Username</label>
@@ -69,6 +72,7 @@
 
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
     <script src="js/login.js"></script>
+    <script src="script/login-script.js"></script>
 </body>
 
 </html>
